# wry

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_KNOWLEDGE_BASE.md  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION.md  LICENSE  README.md  RELEASE_PROCESS.md  TODO.md  pyproject.toml  pytest.ini  requirements-dev.txt  test_with_act.sh
.github/workflows/: check-requirements.yml  ci-cd.yml  ci.yaml  ci.yml  publish-to-pypi.yml  test.yml
examples/: argument_help_injection.py  auto_instantiate_edge_cases.py  auto_instantiate_poc.py  auto_model_example.py  autowrymodel_comprehensive.py  config.json  explicit_argument_help.py  field_exclusion.py  field_exclusion_example.py  intermediate_example.py  multi_model_example.py  multimodel_comprehensive.py  sample_config.json  simple_cli.py  source_tracking_comprehensive.py  source_tracking_example.py  wrymodel_comprehensive.py
scripts/: README.md  extract_release_notes.py  test_all_versions.sh  test_ci_locally.sh  update-dependencies.sh  update-requirements.sh
src/drycli/: __init__.py
tests/: README.md  test_placeholder.py
tests/features/: __init__.py  test_auto_model.py  test_inheritance.py  test_multi_model.py  test_source_precedence.py
tests/integration/: __init__.py  test_boolean_flags_integration.py  test_click_edge_cases.py  test_click_integration.py  test_click_integration_extended.py  test_context_handling.py
tests/unit/: __init__.py  test_argument_help_injection.py  test_comprehensive_imports.py  test_exclude_enum.py  test_generate_click_classmethod.py  test_help_system.py  test_init.py  test_init_edge_cases.py  test_init_version_edge_cases.py  test_model_extraction_methods.py  test_multiple_option_bug.py  test_type_checking_imports.py  test_variadic_argument_bug.py  test_version_fallback.py  test_version_parsing.py
tests/unit/auto_model/: test_auto_model_annotation_inference.py  test_auto_model_edge_cases.py  test_auto_model_field_processing.py  test_auto_model_list_fields.py  test_boolean_on_off_flags.py  test_comma_separated_lists.py  test_field_annotation_handling.py  test_field_annotations.py  test_new_marker_api.py  test_optional_list_comma_separated.py  test_type_inference.py
tests/unit/click/: README_TESTING_STRATEGY.md  test_argument_types.py  test_bool_flag_handling.py  test_click_config_building.py  test_click_constraint_formatting.py  test_click_decorator_edge_cases.py  test_click_interval_constraints.py  test_click_lambda_parsing.py  test_click_length_constraints.py  test_click_parameter_generation.py  test_click_predicate_handling.py  test_closure_extraction_errors.py  test_closure_handling.py  test_constraint_behavior.py  test_constraint_edge_cases.py  test_env_vars_option.py  test_explicit_argument_help_injection.py  test_field_alias_with_click_options.py  test_format_constraint_text.py  test_json_config_loading.py  test_lambda_behavior.py  test_lambda_error_handling.py  test_predicate_source_errors.py  test_strict_mode_errors.py  test_type_handling.py
tests/unit/core/: test_accessors.py  test_advanced_features.py  test_classvar_migration.py  test_core.py  test_edge_cases.py  test_env_utils.py  test_field_constraint_extraction.py  test_field_utils.py  test_field_utils_edge_cases.py  test_sources.py  test_type_checking_blocks.py
tests/unit/model/: test_accessor_caching.py  test_extract_edge_cases.py  test_extract_subset_edge_cases.py  test_model_click_context_handling.py  test_model_data_extraction.py  test_model_default_handling.py  test_model_edge_cases.py  test_model_environment_integration.py  test_model_extract_subset_edge_cases.py  test_model_field_errors.py  test_model_object_extraction.py  test_non_dict_object_extraction.py  test_object_attribute_extraction.py
tests/unit/multi_model/: test_multi_model.py  test_type_checking.py
wry/: __init__.py  _version.py  auto_model.py  click_integration.py  comma_separated.py  help_system.py  multi_model.py
wry/core/: __init__.py  accessors.py  env_utils.py  field_utils.py  model.py  sources.py
